=Changelog

==0.2.0 (not yet released)
* Collection class to store search results (with support for search score)
* Introduced Individual as superclass for Artist and Label
* Added unique_name method for Artist and Label
* Label: Renamed founding_date and dissolving_date to begin_date
  and end_date (to be more consistent with Artist)
* Added label type "Unknown"

==0.1.1 (2007-05-29)
* Full support for relations
* Proper exception handling in Webservice class
* Minor corrections

==0.1.0 (2007-05-23)
* Initial release

$Id$