@@ -46,8 +46,8 @@ module MusicBrainz
       # 
       # Raises: +RequestError+, +ResourceNotFoundError+, +AuthenticationError+,
       # +ConnectionError+ 
-      def get(entity, id, options = {:include => nil, :filter => nil, :version => 1})
-        url = URI.parse(create_uri(entity, id, options))
+      def get(entity, options = {:id => nil, :include => nil, :filter => nil, :version => 1})
+        url = URI.parse(create_uri(entity, options))
         request = Net::HTTP::Get.new(url.request_uri)
         connection = Net::HTTP.new(url.host, url.port)
         
@@ -81,13 +81,19 @@ module MusicBrainz
       private # ----------------------------------------------------------------
       
       # Builds a request URI for querying the webservice.
-      def create_uri(entity, id, options = {:include => nil, :filter => nil, :version => 1})
+      def create_uri(entity, options = {:id => nil, :include => nil, :filter => nil, :version => 1})
         # Make sure the version is set
         options[:version] = 1 if options[:version].nil?
         
         # Build the URI
-        uri  = 'http://%s:%d%s/%d/%s/%s?type=%s' %
-               [@host, @port, @path_prefix, options[:version], entity, id.uuid, 'xml']
+        if options[:id]
+          uri = 'http://%s:%d%s/%d/%s/%s?type=%s' %
+                [@host, @port, @path_prefix, options[:version], entity,
+                 options[:id].uuid, 'xml']
+        else
+          uri = 'http://%s:%d%s/%d/%s/?type=%s' %
+                [@host, @port, @path_prefix, options[:version], entity, 'xml']
+        end
         uri += '&' + options[:include].to_s unless options[:include].nil?
         uri += '&' + options[:filter].to_s unless options[:filter].nil?
         return uri
